2005-11-23  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/config.h.in :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* main/Makefile.in :
	* main/agent.l :
	* main/agent.y :
	* main/parser.h :
	* main/policy.l :
	* main/policy.y :
	* main/vlad.cpp :

	  - Added 2005 to copyright notice.

	* main/agent.l :
	* main/agent.y :
	* main/policy.l :
	* main/policy.y :

	  - Some newer versions of flex seems to enable yylineno by default,
	    without any means to turn it off, yet some versions do not. The
	    only portable way to do rename yylineno to some other name to
	    avoid the conflict (yylinenum, i.e. policylinenum and
	    agentlinenum).

2005-11-22  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* samples/chwall.vlp :

	  - Fixed some typos.

2005-02-21  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.cpp :

	  - Fixed bug in list::del().

2004-12-17  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* main/vlad.cpp :

	  - Display copyright notice when run with -v.

	* Makefile.in :
	* configure :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/config.h.in :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :