@@ -76,4 +76,12 @@ class list
     void purge(bool a_free);
 } ;
 
+/* convenience macros */
+
+#define VLAD_LIST_LENGTH(X) \
+  (((X) == NULL) ? 0 : (X)->length())
+
+#define VLAD_LIST_ITEMCMP(X,Y) \
+  (((X) == NULL) ? ((Y) == NULL) : (((Y) == NULL) ? false : ((X)->cmp(Y))))
+
 #endif
