@@ -25,6 +25,7 @@
 #include <new>
 
 #include <vlad/vlad.h>
+#include <vlad/identifier.h>
 #include <vlad/polbase.h>
 
 /* some shorthand macros */
